# AnyoneAI_Sprint_01

./: .gitignore  VSCode.code-workspace  gemini.md  pyproject.toml
Sprint_01-Marco_Pantalone/: ASSIGNMENT.md  AnyoneAI - Sprint Project 01.ipynb
Sprint_01-Marco_Pantalone/queries/: delivery_date_difference.sql  global_ammount_order_status.sql  real_vs_estimated_delivered_time.sql  revenue_by_month_year.sql  top_10_revenue_categories.sql
Sprint_01-Marco_Pantalone/src/: extract.py  plots.py  transform.py
Sprint_01-Marco_Pantalone/src/anyoneai_sprint1.egg-info/: PKG-INFO  requires.txt
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat  get_gprof  get_objgraph  jsonpointer  undill
outputs/data/: query_delivery_date_difference_result.parquet  query_freight_value_weight_relationship_result.parquet  query_global_ammount_order_status_result.parquet  query_orders_per_day_and_holidays_2017_result.parquet  query_real_vs_estimated_delivered_time_result.parquet  query_revenue_by_month_year_result.parquet  query_revenue_per_state_result.parquet  query_top_10_least_revenue_categories_result.parquet  query_top_10_revenue_categories_result.parquet
outputs/extracted/: olist_order_payments.parquet  olist_products.parquet  olist_sellers.parquet  product_category_name_translation.parquet  public_holidays.parquet
queries/: revenue_per_state.sql  top_10_least_revenue_categories.sql
src/: config.py  load.py  plots_backup.py  transform.py
src/anyoneai_sprint1.egg-info/: SOURCES.txt
tests/: test_extract.py  test_transform.py
