[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anyoneai_sprint1"
version = "0.1.0"
description = "Data Pipeline Exercise"
authors = [{ name = "Marco Pantalone" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "jupyter",
    "black",
    "db-sqlite3",
    "matplotlib",
    "pandas",
    "plotly_express",
    "requests",
    "seaborn",
    "SQLAlchemy",
    "nbformat",
    "pytest"
]

[tool.setuptools.packages.find]
where = ["src"]
